还是把jq替换为原生

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     {
       "matches": ["https://*.bilibili.com/*"],
       "js": ["content-script.js"],
-      "run_at": "document_end"
+      "run_at": "document_idle"
     }
   ],
   
