--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "bili-guard",
-  "description": "bilibili guard",
+  "name": "__MSG_extensionName__",
+  "description": "__MSG_extensionDescription__",
   
   "version": "0.1",
   "default_locale": "en",
@@ -26,8 +26,9 @@
   ],
   
   "icons": {
-    "16": "icons/page-16.png",
-    "32": "icons/page-32.png",
-    "48": "icons/page-48.png"
+    "16": "icons/bili-guard-16.png",
+    "32": "icons/bili-guard-32.png",
+    "48": "icons/bili-guard-48.png",
+    "256": "icons/bili-guard-256.png"
   }
 }
